test/scc/expr/semantic-errors/125.a
125.t:5:34: error: expression must have arithmetic type